# rustman

./: Cargo.toml  readme.md
.github/workflows/: rust-ci.yml
res/: rustman1.txt  rustman2.txt  rustman3.txt  rustman4.txt  rustman5.txt
src/: main.rs
