[package]
name = "rustman"
version = "0.1.0"
edition = "2021"
authors = ["Dave Jenkins, dave.matthew.j@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
random_word = { version = "0.4.2", features = ["en"] }
crossterm = "0.26"
clearscreen = "2.0.1"
cargo-watch = "8.5.2"
